--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@ btn-primary:hover {
         </div>
         <img src="icons1-1.png" alt="Profile" class="profile-icon" onclick="toggleDropdown()">
         <div class="dropdown-menu" id="dropdownMenu">
-            <a href="#">Profile</a>
-            <a href="#">Settings</a>
-            <a href="#">Logout</a>
+            <a href="profile.html">Profile</a>
+            <a href="boon.html">dashboard</a>
+            <a href="index.html">Logout</a>
         </div>
     </header>
     <hr>
@@ -301,14 +301,14 @@ btn-primary:hover {
             <h2>UNLEASHING THE POWER <br>OF GROWTH</h2>
             <p style="color:#111111">Elevate to Obtain the future of your choice.</p>
             
-            <a href="#" class="hero-button1">Learn More</a></button>
-            <a href="#" class="hero-button2">Login</a></button>
+            <a href="login.html" class="hero-button1">Learn More</a></button>
+            <a href="login.html" class="hero-button2">Login</a></button>
         </div>
     </section>
     <section class="intro">
       <h1> Create new future<br> by investing with us<br> Lets Dive into BoonGroth now</h1>
       <p>Boon invest is here to make it sweet and profitable for everyone to partake and take part</p>
-      <a href="#" class="intro-btn">Get Started</a></button>
+      <a href="account.html" class="intro-btn">Get Started</a></button>
     </section>
         <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
